基础架构设计的更改